Fixed simple misspelling (Deinfe -> Define)

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -302,14 +302,14 @@ Setting_Description_email.activation=Define this template to send an email to us
 Setting_Description_email.activation.token=Define this template to send an email during the activation verification process. You can use %TOKEN% to insert the token value into the email.
 Setting_Description_email.adminAlert.toAddress=Define this template to send an email when System Audit events occur to the defined email addresses.
 Setting_Description_email.challenge.token=Define this template to send an email during the forgotten password verification process.  You can use %TOKEN% to insert the token value into the email.
-Setting_Description_email.changePassword=Deinfe this template to send an email to the users when password changes occur. @PwmAppName@ only sends this email when the users change their own passwords.
+Setting_Description_email.changePassword=Define this template to send an email to the users when password changes occur. @PwmAppName@ only sends this email when the users change their own passwords.
 Setting_Description_email.changePassword.helpdesk=Define this template to send an email to users when the Help Desk changes the users' passwords. @PwmAppName@ expands macros for this setting based on the user who is changing their password, not the Help Desk user. 
 Setting_Description_email.default.fromAddress=Specify a default From Address for the email templates.
 Setting_Description_email.deleteAccount=Define this template to send an email to the users after the Account Delete action.
 Setting_Description_email.guest=Define this template to send an email to newly created guest users.
 Setting_Description_email.helpdesk.token=Define this template to send an email during the Help Desk verification process.  You can use %TOKEN% to insert the token value into the email.
 Setting_Description_email.helpdesk.unlock=Define this template to send an email to users to whose account is unlocked by the help desk.
-Setting_Description_email.intruderNotice=Deinfe this template to send an email when a userDN intruder lockout occurs.
+Setting_Description_email.intruderNotice=Define this template to send an email when a userDN intruder lockout occurs.
 Setting_Description_email.newUser=Define this template to send an email to newly created users.
 Setting_Description_email.newUser.token=Define this template to send an email during the new user verification process.  You can use %TOKEN% to insert the token value into the email.
 Setting_Description_email.queueMaxAge=Specify the maximum age (in seconds) an email can wait in the send queue.  If an email is in the send queue longer than this time, @PwmAppName@ discards it.  Emails only persist in the send queue if there is an IO or network error to the SMTP server while sending the email.
