update localization fix issue with file locking on windows refactor changepassword module for post-redirect-get pattern misc java refactoring

--- a/src/main/resources/password/pwm/i18n/Error.properties
+++ b/src/main/resources/password/pwm/i18n/Error.properties
@@ -158,6 +158,7 @@ Error_StartupError=An error occurred while starting the application.  Check the 
 Error_EnvironmentError=An error with the application environment has prevented the application from starting.
 Error_ApplicationNotRunning=This functionality is not available until the application configuration is restricted.
 Error_EmailSendFailure=Error sending email item %1%, error: %2%
+Error_PasswordOnlyBad=Password incorrect.  Please try again.
 
 Error_RemoteErrorValue=Remote Error: %1%
 
