--- a/src/main/resources/password/pwm/i18n/Error_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Error_fr.properties
@@ -39,7 +39,7 @@ Password_TooManyAlpha=Le nouveau mot de passe comporte trop de lettres
 Password_TooManyNumeric=Le nouveau mot de passe comporte trop de chiffres
 Password_TooManyLower=Le nouveau mot de passe comporte trop de lettres minuscules
 Password_TooManyUpper=Le nouveau mot de passe comporte trop de lettres majuscules
-Password_TooManyOldChars=Le nouveau mot de passe comporte trop de caract\u00e8res de votre ancien mot de passe.
+Password_TooManyOldChars=Le nouveau mot de passe comporte trop de caract\u00e8res de votre ancien mot de passe
 Password_TooManyNonAlphaSpecial=Le nouveau mot de passe comporte trop de symboles (non alphanum\u00e9riques).
 Password_InvalidChar=Le nouveau mot de passe comporte un caract\u00e8re non valide.
 Password_RequiredMissing=Un caract\u00e8re obligatoire est manquant dans le nouveau mot de passe.
