--- a/src/main/resources/password/pwm/i18n/Error_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Error_nl.properties
@@ -55,8 +55,8 @@ Password_MeetsRules=Het nieuwe wachtwoord is geaccepteerd. Klik op Wachtwoord wi
 Password_TooSoon=Er is niet genoeg tijd verstreken sinds de laatste wachtwoordwijziging
 Password_UsingDisallowedValue=In het nieuwe wachtwoord wordt een waarde gebruikt die niet is toegestaan
 Password_TooWeak=Het wachtwoord is te zwak. Probeer meer cijfers, speciale tekens of hoofd- en kleine letters toe te voegen.
-Password_TooManyNonAlpha=Het nieuwe wachtwoord bevat te veel tekens die geen letters zijn.
-Password_NotEnoughNonAlpha=Het nieuwe wachtwoord bevat niet genoeg tekens die geen letters zijn.
+Password_TooManyNonAlpha=Het nieuwe wachtwoord bevat te veel tekens die geen letters zijn
+Password_NotEnoughNonAlpha=Het nieuwe wachtwoord bevat niet genoeg tekens die geen letters zijn
 Password_UnknownValidation=Het wachtwoord voldoet niet aan de eisen. Probeer een ander wachtwoord.
 Password_NewPasswordRequired=Er is een nieuw wachtwoord vereist om verder te gaan.
 Password_Expired=Het wachtwoord is verlopen.
