--- a/src/main/resources/password/pwm/i18n/Error_ja.properties
+++ b/src/main/resources/password/pwm/i18n/Error_ja.properties
@@ -135,9 +135,9 @@ Error_AuditWrite=\u76e3\u67fb\u8a18\u9332\u3092\u66f8\u304d\u8fbc\u3081\u307e\u3
 Error_LdapIntruder=\u3053\u306e\u30e6\u30fc\u30b6ID\u306e\u30ed\u30b0\u30a4\u30f3\u6700\u5927\u8a66\u884c\u56de\u6570\u3092\u8d85\u3048\u307e\u3057\u305f\u3002\u5f8c\u3067\u3001\u3082\u3046\u4e00\u5ea6\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Error_NoLdapConnection=\u5fc5\u8981\u306a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306b\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002
 Error_OAuthError=OAuth\u8a8d\u8a3c\u30d7\u30ed\u30c8\u30b3\u30eb\u306e\u4f7f\u7528\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u5f8c\u3067\u3001\u3082\u3046\u4e00\u5ea6\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-Error_FieldRequired=%1% \u306f\u5fc5\u9808\u3067\u3059\u3002
+Error_FieldRequired=%1% \u306f\u5fc5\u9808\u3067\u3059
 Error_FieldNotANumber=%1% \u306f\u6570\u5b57\u306b\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
-Error_FieldInvalidEmail=%1% \u306f\u6709\u52b9\u306a\u96fb\u5b50\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+Error_FieldInvalidEmail=%1% \u306f\u6709\u52b9\u306a\u96fb\u5b50\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3067\u306f\u3042\u308a\u307e\u305b\u3093
 Error_FieldTooShort=%1% \u306f\u77ed\u3059\u304e\u307e\u3059\u3002
 Error_FieldTooLong=%1% \u306f\u9577\u3059\u304e\u307e\u3059\u3002
 Error_FieldDuplicate=%1% \u306f\u3059\u3067\u306b\u4f7f\u7528\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u5225\u306e\u5024\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002
