--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -123,9 +123,9 @@ Button_Report_Clear=Clear
 Confirm_Report_Start=Do you wish to start the report engine?  <br/><br/>This may take a long while to run.<br/><br/>While the report engine is running, there may be a slowdown for users accessing the system.  Once running, the report engine can be stopped at any time.
 Confirm_Report_Stop=Do you wish to stop the report engine?  <br/><br/>You can restart the report engine at any time.
 Confirm_Report_Clear=Do you wish clear the cached report data?  <br/><br/>This will clear all cached report records and summary.  The next time the report is run and as users authenticate, the cached data will be re-populated.
-Display_Start_Report_Success=Request has been sent to start report engine.
-Display_Stop_Report_Success=Request has been sent to stop the report engine.
-Display_Clear_Report_Success=Request has been sent to clear the cached report data.
+Display_Report_Action_Start=Sending request to start report engine.
+Display_Report_Action_Stop=Sending request to stop the report engine.
+Display_Report_Action_Clear=Sending request to clear the cached report data.
 Statistic_Label.Authentications=Authentications
 Statistic_Description.Authentications=Number of successful user authentications that have occurred.
 Statistic_Label.AuthenticationFailures=Authentication Failures
