obsolete url filter

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -270,6 +270,8 @@ Statistic_Label.RecoveryOTPFailed=Forgotten Password OTP Secrets Failed
 Statistic_Description.RecoveryOTPFailed=Number of invalid attempts to verify OTP secrets used by the forgotten password process.
 Statistic_Label.ForeignSessionsAccepted=Foreign Sessions Accepted
 Statistic_Description.ForeignSessionsAccepted=Number of sessions generated on a foreign or server or previous instance of this server and accepted as valid authentication.
+Statistic_Label.ObsoleteUrlRequests=Obsolete URL Requests
+Statistic_Description.ObsoleteUrlRequests=Number of web requests to obsolete URLs.
 Statistic_Label.EpsType_PASSWORD_CHANGES=Password Changes
 Statistic_Label.EpsType_AUTHENTICATION=Authentications
 Statistic_Label.EpsType_INTRUDER_ATTEMPTS=Intruder Attempts
@@ -284,7 +286,7 @@ Title_ReportEngineStatus=Report Engine Status
 Title_EventStatistics=Event Statistics
 Title_RawStatistics=Raw Statistics
 Title_StatisticsCharts=Event Charts
-Title_Sessions=Active<br/>Web Sessions
+Title_Sessions=Active Web Sessions
 Title_Intruders=Intruders
 Title_Audit=Audit Records
 Title_AuditUsers=Users
