fix startup issue with report service

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -606,7 +606,7 @@ Setting_Description_recovery.response.writePreference=<p>Select the location whe
 Setting_Description_recovery.searchFilter=Add an LDAP search filter @PwmAppName@ uses to search for users during forgotten password recovery. The LDAP search filter must include each attribute in the <b>Forgotten Password User Search Form</b>.  @PwmAppName@ replaces tokens made of a form item name (such as <code>cn</code>) enclosed with a percent sign <code>%cn%</code> with values supplied by the user.<br><br>For example, if the <b>Activate User Form</b> included the attributes <code>cn</code> and <code>sn</code>, then this filter might be appropriate\:<br><br><code>(&amp;(objectClass\=person)(cn\=%cn%)(sn\=%sn%))</code><br><br>If this setting is left blank, @PwmAppName@ automatically generates a search filter based on the required items in the <b>Forgotten Password User Search Form</b>.
 Setting_Description_recovery.sendNewPassword.sendMethod=Select the method to send new password to users when the <b>Forgotten Password Success Action</b> is set to <b>Send new password</b>.
 Setting_Description_recovery.verificationMethods=Select the verification methods @PwmAppName@ uses during the forgotten password process.  The users must satisfy each option set to required.  The users can then select any of the remaining optional methods until they complete the minimum number of optional methods.<br/><br/>You can modify tthe names and a description shown to users for these methods by editing the display text keys for <code>Field_VerificationMethod[Method]</code> and <code>Description_VerificationMethod[Method]</code> where <code>[Method]</code> is the method type.
-Setting_Description_reporting.enable=Enable directory reporting.  When enabled, @PwmAppName@ maintains a local cache of user data and makes it available to the administrator.  Enabling this option requires additional disk space and possibly more Java heap memory, Test it on a test server before enabling this setting in a production environment.
+Setting_Description_reporting.enable=Enable daily reporting job.  When enabled, @PwmAppName@ will execute a daily report update job.  
 Setting_Description_reporting.job.intensity=Control the level of intensity of a reporting job execution.  Higher levels will complete the report job faster but cause more workload on @PwmAppName@ and the LDAP directory.
 Setting_Description_reporting.job.timeOffset=Specify the number of seconds past midnight (GMT) when @PwmAppName@ processes the update job.  Setting this option to -1 disables the nightly job processor.
 Setting_Description_reporting.ldap.maxQuerySize=Specify the maximum number of records read during a reporting query search.  Setting this value to a larger sizes requires more Java heap memory.
@@ -1081,7 +1081,7 @@ Setting_Label_recovery.response.writePreference=Response Write Location
 Setting_Label_recovery.searchFilter=Forgotten Password User Search Filter
 Setting_Label_recovery.sendNewPassword.sendMethod=New Password Send Method
 Setting_Label_recovery.verificationMethods=Verification Methods
-Setting_Label_reporting.enable=Enable Directory Reporting
+Setting_Label_reporting.enable=Enable Daily Reporting Job
 Setting_Label_reporting.job.intensity=Reporting Job Intensity
 Setting_Label_reporting.job.timeOffset=Reporting Job Time Offset
 Setting_Label_reporting.ldap.maxQuerySize=Maximum LDAP Query Size
