--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -55,6 +55,7 @@ Button_Show=Show
 Button_Show_Responses=Show Responses
 Button_Skip=Skip
 Button_SMS=SMS
+Button_TokenResend=Resend Code
 Button_Unlock=Unlock
 Button_UnlockPassword=Unlock Password
 Button_Update=Update
@@ -165,6 +166,7 @@ Display_SetupOtp_iPhone_Steps=<b>On your iPhone, tap the App Store icon.</b><ol>
 Display_SetupOtp_Other_Title=Other
 Display_SetupOtp_Other_Steps=<b>Find a compatible two-factor app.</b><ul><li>Try searching your device's app store for <b>Google Authenticator</b>.<br/>Many devices have compatible apps.</li><li>Try looking for an app that supports "<b>TOTP security tokens"</b> or "RFC6238"</li><li>Download and install the application.</li></ul><b>Next, open and configure the app.</b><ol><li>Enter the data below or scan the code as the app instructs.</li><li>Once you have configured the app, click the continue button.</li></ol>
 Display_TokenDestination=Token Destination
+Display_TokenResend=Your security code should arrive right away.  If you have waited for a while and haven't yet received a code, click the resend code button to receive a new code.
 Display_UsernameHeader=@User:ID@
 Display_UsernameFooter=@User:ID@
 Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class="timestamp">%1%</span>.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
@@ -238,7 +240,7 @@ Field_VerificationMethodChallengeResponses=Secret Questions and Answers
 Field_VerificationMethodAttributes=Personal Data
 Field_VerificationMethodRemoteResponses=External Responses
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=External Authentication
+Field_VerificationMethodOAuth=External OAuth Authentication
 Description_VerificationMethodPreviousAuth=
 Description_VerificationMethodToken=
 Description_VerificationMethodOTP=
