--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -169,3 +169,4 @@ Success_UpdateProfile=Your user information has been successfully updated.
 Success_UpdateForm=Your profile is ready to be updated.  Continue when ready.
 Success_Action=The action %1% has completed successfully.
 Success_OtpSetup=Your device enrollment has been successfully completed.
+Success_TokenResend=A new security code has been sent to you.
