--- a/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -25,9 +25,9 @@ ldap_admin_title=LDAP Proxy Credentials
 ldap_admin_title_proxy-dn=Proxy DN
 ldap_admin_title_proxy-pw=Proxy Password
 ldap_cert_description=The following are the LDAP server certificates read from the server at <code>%1%</code>. Please verify these certificates match your LDAP server.
-ldap_context_description=Please enter the top level container of your LDAP directory that contains users. This sets the top level LDAP container where an LDAP sub-tree search is performed to find user entries. If you need to enter multiple containers, you can add them after this guide completes.
+ldap_context_description=Please enter the top level container of your LDAP directory that contains users. This sets the top level LDAP container where an LDAP sub-tree search is performed to find user entries. If you need to enter multiple containers, you can add them after this guide completes.  Authentication to @PwmAppName@ is permitted only for users that are contained within the configured context values.
 ldap_context_admin_title=Administrators Group
-ldap_context_admin_description=<p>A group in your LDAP directory will be used to control administrative access to @PwmAppName@.</p><p>Please enter the LDAP distinguished name (DN) of the group to use to control administrative access.  Each member of this group will have administrative access to this application.</p>
+ldap_context_admin_description=<p>A group in your LDAP directory will be used to control administrative access to @PwmAppName@.</p><p>Please enter the LDAP distinguished name (DN) of the group to use to control administrative access.  Each member of this group will have administrative access to this application.</p><p>As with other users, administrative users must be contained within the previously configured LDAP Login Root Context.
 ldap_server_description=Enter the connection information for your LDAP server.  After the configuration guide is completed you can enter additional servers.  Enter the real address of your LDAP server; do not use a virtual address or proxy server address.
 ldap_server_title=LDAP Server
 ldap_server_title_hostname=Hostname
