[Bug fixed for 1019200] Corrected the message to tell whose password was changed. Added the new text to the message files to be translated.

--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=Your secret questions and answers have been successfully r
 Success_CreateGuest=The new guest account has been successfully created.  The guest user will receive a notification if the email address has been entered.  The guest account may still need activation.
 Success_CreateUser=Your new user account has been successfully created.
 Success_NewUserForm=Your account is ready to be created.  Continue when ready.
-Success_PasswordChange=Your password has been changed successfully.
+Success_PasswordChange=The password has been changed successfully.
+Success_ChangedHelpdeskPassword=The password has been changed successfully for user 
 Success_PasswordReset=Password for %1% has been set successfully.
 Success_PasswordSend=Your new password has been sent to %1%.  Please close this window and then login using your new password.
 Success_ResponsesMeetRules=Your answers meet the requirements.  Click Save Answers when ready.
