add setting 'External Web Services Secrets' and required syntax support for named passwords

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -673,7 +673,7 @@ Setting_Description_urlshortener.classname=Specify the URL Shortening Service cl
 Setting_Description_urlshortener.parameters=Specify the Name/Value settings used to configure the selected URL shortening service. For example, an API key, user name, password or domain name. The settings must be in "name\=value" format, where name is the key value of a valid service setting.
 Setting_Description_useXForwardedForHeader=If present, use the X-Forwarded-For HTTP header value as the client IP address instead of the source IP address of the HTTP connection.  Typically, upstream proxies add X-Forwarded-For headers or firewalls and might be the only reliable way to identify the user's source IP address.
 Setting_Description_webservices.enableReadAnswers=Enable this option to allow @PwmAppName@ to use web services to read stored Challenge/Response answers of users.  The read responses are available in whatever hashing method format you selected.
-Setting_Description_webservices.external.secret=If specified, @PwmAppName@ requires external web service clients to provide this value when invoking web services.
+Setting_Description_webservices.external.secrets=<p>Add named secrets for web services clients.  Protected web services require authentication with a named secret.  Create a secret with a name and secret key (password), and then enable the services that that named secret will be able to invoke.</p><p>Authentication to the web services must be invoked using Basic Authentication with the name of the secret as the username and the secret as the password.</p>
 Setting_Description_webservices.healthStats.makePublic=Enable this option to enable the Health and Statistics web services publicly.  Normally, these require authentication as there might be security sensitive data available.  Enabling this option allows the users to use the web services without authentication.  You must enable this is setting for the public (non-authenticated) page at <i>/public/health.jsp</i> to be functional.
 Setting_Description_webservices.queryMatch=Add an LDAP filter that contains the users permitted to execute REST web services.
 Setting_Description_webservices.thirdParty.queryMatch=Add an LDAP filter that contains the users permitted to execute REST web services and specify a third party via the 'username' parameter.
@@ -1145,7 +1145,7 @@ Setting_Label_urlshortener.classname=Enable URL Shortening Service Class
 Setting_Label_urlshortener.parameters=Configuration Parameters for URL Shortening Service
 Setting_Label_useXForwardedForHeader=Use X-Forwarded-For Header
 Setting_Label_webservices.enableReadAnswers=Allow Web Services to Read Answers
-Setting_Label_webservices.external.secret=External Web Services Secret Key
+Setting_Label_webservices.external.secrets=External Web Services Secrets
 Setting_Label_webservices.healthStats.makePublic=Enable Public Health and Statistics Web Services
 Setting_Label_webservices.queryMatch=External Web Services Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services Third Party Permissions
