Stylistic changes to PeopleSearch/OrgChart. Make "Loading" message only display when no person cards are showing yet

--- a/src/main/angular/src/i18n/translations_en.json
+++ b/src/main/angular/src/i18n/translations_en.json
@@ -8,8 +8,8 @@
 
   "Display_PleaseWait": "Loading...",
 
-  "Display_SearchResultsExceeded": "Search results exceeded maximum search size.",
-  "Display_SearchResultsNone": "No results.",
+  "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
+  "Display_SearchResultsNone": "No results",
 
   "Placeholder_Search": "Search"
 }
