Person card size changes. Org chart responsiveness simplified to 3 width intervals. Remove punctuation at end of PeopleSearch translation strings

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -149,9 +149,9 @@ Display_ResponsesPrompt=Please type your security answers
 Display_SelectionIndicator=Please select a question item from the list
 Display_SearchCompleted=Search completed.
 Display_SearchResultsInfo=Returned %1% results in %2%.
-Display_SearchResultsExceeded=Search results exceeded maximum search size.
+Display_SearchResultsExceeded=Search results exceeded maximum search size
 Display_SetRandomPasswordPrompt=Set a new random password for this user?
-Display_SearchResultsNone=No results.
+Display_SearchResultsNone=No results
 Display_Second=second
 Display_Seconds=seconds
 Display_SetupHelpdeskResponses=<p>Your administrator requires that you supply the following answers.  These answers are used to verify your identity in the event that you contact your help desk for assistance.</p>
