--- a/src/main/resources/password/pwm/i18n/Display_da.properties
+++ b/src/main/resources/password/pwm/i18n/Display_da.properties
@@ -148,9 +148,9 @@ Display_ResponsesPrompt=Skriv dine sikkerhedssvar
 Display_SelectionIndicator=V\u00e6lg et sp\u00f8rgsm\u00e5l p\u00e5 listen
 Display_SearchCompleted=S\u00f8gningen er gennemf\u00f8rt.
 Display_SearchResultsInfo=Returnerede %1% resultater p\u00e5 %2%.
-Display_SearchResultsExceeded=S\u00f8geresultaterne overskred maksimumst\u00f8rrelsen for s\u00f8gninger.
+Display_SearchResultsExceeded=S\u00f8geresultaterne overskred maksimumst\u00f8rrelsen for s\u00f8gninger
 Display_SetRandomPasswordPrompt=Vil du angive en ny tilf\u00e6ldig adgangskode for denne bruger?
-Display_SearchResultsNone=Ingen resultater.
+Display_SearchResultsNone=Ingen resultater
 Display_Second=sekund
 Display_Seconds=sekunder
 Display_SetupHelpdeskResponses=<p>Administratoren kr\u00e6ver, at du angiver f\u00f8lgende svar. Disse svar bruges til at bekr\u00e6fte din identitet, hvis det skulle ske, at du har brug for at kontakte support for at f\u00e5 hj\u00e6lp.</p>
