--- a/src/main/resources/password/pwm/i18n/Display_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr.properties
@@ -148,9 +148,9 @@ Display_ResponsesPrompt=Veuillez entrer vos r\u00e9ponses de s\u00e9curit\u00e9
 Display_SelectionIndicator=S\u00e9lectionnez une question dans la liste
 Display_SearchCompleted=Recherche effectu\u00e9e.
 Display_SearchResultsInfo=%1% r\u00e9sultats renvoy\u00e9s dans %2%.
-Display_SearchResultsExceeded=Les r\u00e9sultats de la recherche d\u00e9passent la taille maximale de la recherche.
+Display_SearchResultsExceeded=Les r\u00e9sultats de la recherche d\u00e9passent la taille maximale de la recherche
 Display_SetRandomPasswordPrompt=Voulez-vous d\u00e9finir un nouveau mot de passe al\u00e9atoire pour cet utilisateur ?
-Display_SearchResultsNone=Aucun r\u00e9sultat.
+Display_SearchResultsNone=Aucun r\u00e9sultat
 Display_Second=seconde
 Display_Seconds=secondes
 Display_SetupHelpdeskResponses=<p>Votre administrateur exige que vous indiquiez les r\u00e9ponses suivantes. Elles permettent de v\u00e9rifier votre identit\u00e9 si vous devez vous adresser au service d'assistance pour obtenir de l'aide.</p>
