--- a/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -148,9 +148,9 @@ Display_ResponsesPrompt=Wpisz odpowiedzi na pytania zabezpieczaj\u0105ce
 Display_SelectionIndicator=Wybierz pytanie z listy
 Display_SearchCompleted=Wyszukiwanie uko\u0144czone.
 Display_SearchResultsInfo=Zwr\u00f3cono nast\u0119puj\u0105c\u0105 liczb\u0119 wynik\u00f3w w %2%\: %1%.
-Display_SearchResultsExceeded=Wyniki wyszukiwania przekroczy\u0142y maksymalny rozmiar wyszukiwania.
+Display_SearchResultsExceeded=Wyniki wyszukiwania przekroczy\u0142y maksymalny rozmiar wyszukiwania
 Display_SetRandomPasswordPrompt=Czy ustawi\u0107 nowe has\u0142o losowe dla tego u\u017cytkownika?
-Display_SearchResultsNone=Brak wynik\u00f3w.
+Display_SearchResultsNone=Brak wynik\u00f3w
 Display_Second=sekunda
 Display_Seconds=sek.
 Display_SetupHelpdeskResponses=<p>Administrator wymaga podania nast\u0119puj\u0105cych odpowiedzi. Te odpowiedzi s\u0142u\u017c\u0105 do zweryfikowania Twojej to\u017csamo\u015bci w przypadku kontaktowania si\u0119 z pomoc\u0105 techniczn\u0105 w celu uzyskania wsparcia.</p>
