--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -148,9 +148,9 @@ Display_ResponsesPrompt=Digite suas respostas de seguran\u00e7a
 Display_SelectionIndicator=Selecione um item de pergunta na lista
 Display_SearchCompleted=Pesquisa conclu\u00edda.
 Display_SearchResultsInfo=Retornou %1% resultados em %2%.
-Display_SearchResultsExceeded=Os resultados da pesquisa excedem o tamanho m\u00e1ximo da pesquisa.
+Display_SearchResultsExceeded=Os resultados da pesquisa excedem o tamanho m\u00e1ximo da pesquisa
 Display_SetRandomPasswordPrompt=Definir uma nova senha aleat\u00f3ria para este usu\u00e1rio?
-Display_SearchResultsNone=Nenhum resultado.
+Display_SearchResultsNone=Nenhum resultado
 Display_Second=segundo
 Display_Seconds=segundos
 Display_SetupHelpdeskResponses=<p>O administrador precisa que voc\u00ea forne\u00e7a as respostas a seguir. Essas respostas s\u00e3o usadas para verificar sua identidade caso voc\u00ea contate o suporte t\u00e9cnico para assist\u00eancia.</p>
